# resume-productivity-tools

./: .gitignore  README.md  docker-compose.yml  generate_resume.py  pyproject.toml  workflows.md
ai_enhanced_resume_builder/backend/: Dockerfile  pyproject.toml
ai_enhanced_resume_builder/backend/src/: main.py
ai_enhanced_resume_builder/frontend/: Dockerfile
ai_enhanced_resume_builder/frontend/src/: App.css  App.js  ChatWindow.js
models/: core_info_model.py  eductation_model.py  experience_model.py  skills_model.py
productivity_tools/: LICENSE  generate_resume.py  pyproject.toml
productivity_tools/config/: full_resume.json
productivity_tools/models/: experience_model.py  resume_configs.py  resume_info_model.py
productivity_tools/prompts/: experience_model_json_output.txt  interviewer.txt  resume_critic.txt
productivity_tools/templates/: swe_resume_template.md.jinja
productivity_tools/tests/: test_generate_resume.py
productivity_tools/tests/models/: test_core_info_model.py  test_education_model.py
productivity_tools/utils/: data_handeling.py  template_parser.py
prompts/: keyword_extraction.txt  resume_interviewer.txt  screening_framework.txt
scripts/: create_resume.sh
templates/: swe_resume_template.md  swe_resume_template.md.jinja  swe_resume_template_partial.md
tests/: test_generate_resume.py
tests/models/: test_experience_model.py
tests/utils/: test_template_renderer.py
utils/: data_handeling.py  template_renderer.py
utils/renderers/: renderer_factory.py
workflows/: desired_workflow.md
(+4 files in other folders)
