[tool.poetry]
name = "resume-productivity-tools"
version = "0.1.0"
description = ""
authors = ["Donald Schartman <schartmand@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Jinja2 = "^3.1.3"
pandoc = "^2.3"
pydantic = {extras = ["email"], version = "^2.6.4"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
