[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Donald Schartman <schartmand@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
openai = "^1.14.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
